--- a/web-portfolio/style.css/Portfolio.css
+++ b/web-portfolio/style.css/Portfolio.css
@@ -106,7 +106,13 @@ nav ul {
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
+
+}
+
+main section {
     margin-top: 130px;
+    margin-bottom: 130px;
+
 }
 
 main {
@@ -121,4 +127,20 @@ main {
 .about-items {
     display: flex;
     justify-content: space-around;
+}
+
+.text-center {
+    text-align: center;
+}
+
+/* skill section style */
+.skill-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px #000000;
+    border-radius: 5px;
 }
