--- a/web-portfolio/style.css/Portfolio.css
+++ b/web-portfolio/style.css/Portfolio.css
@@ -144,3 +144,31 @@ main {
     box-shadow: 0px 6px 50px 0px #000000;
     border-radius: 5px;
 }
+
+/* resume section style */
+.resume-container {
+    display: flex;
+    gap: 24px;
+}
+
+/* fotter style */
+footer {
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+footer input[type="text"] {
+    height: 65px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 50px;
+    margin-bottom: 24px;
+    border: none;
+}
